--- a/src/App.css
+++ b/src/App.css
@@ -139,3 +139,14 @@ p {
 .winner-popup button:hover {
   background-color: #3b2f2f;
 }
+.footer {
+  margin-top: 40px;
+  padding: 20px;
+  font-family: 'Georgia', serif;
+  font-size: 16px;
+  text-align: center;
+}
+
+.footer p {
+  margin: 0;
+}
