--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
 }
 
 h1 {
-  margin-top: 20px;
+  margin-bottom: 0.01px;
   font-size: 36px;
 }
 
@@ -67,4 +67,17 @@ button:hover {
 
 .card.flipped .back {
   transform: rotateY(180deg);
+}
+.top-bar {
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px; 
+  font-family: 'Georgia', serif;
+}
+
+.top-bar p {
+  font-size: 20px;
+  margin: 0;
 }
